[package]
name = "zola"
version = "0.16.1"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in"
homepage = "https://www.getzola.org"
repository = "https://github.com/getzola/zola"
keywords = ["static", "site", "generator", "blog"]

include = ["src/**/*", "LICENSE", "README.md"]

[build-dependencies]
clap = "3"
clap_complete = "3"
winres = "0.1"
time = "0.3"

[[bin]]
name = "zola"

[dependencies]
clap = { version = "3", features = ["derive"] }
# Below is for the serve cmd
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"], optional = true }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "time"], optional = true }
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
notify = { version = "4", optional = true }
ws = { version = "0.9", optional = true }
ctrlc = { version = "3", optional = true }
open = { version = "3", optional = true }
pathdiff = "0.2"
# For mimetype detection in serve mode
mime_guess = "2.0"
# For essence_str() function, see https://github.com/getzola/zola/issues/1845
mime = "0.3.16"


site = { path = "components/site" }
errors = { path = "components/errors" }
console = { path = "components/console" }
utils = { path = "components/utils" }
libs = { path = "components/libs" }


[dev-dependencies]
same-file = "1"

[features]
default = ["rust-tls", "serve"]
rust-tls = ["libs/rust-tls"]
native-tls = ["libs/native-tls"]
indexing-zh = ["libs/indexing-zh"]
indexing-ja = ["libs/indexing-ja"]
serve = ["dep:hyper", "dep:tokio", "dep:notify", "dep:ws", "dep:ctrlc", "dep:open", "site/link_checker"]

[workspace]
members = ["components/*"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[package.metadata.winres]
OriginalFilename = "zola.exe"
InternalName = "zola"
